--- a/src/content/pages/julie.html
+++ b/src/content/pages/julie.html
@@ -1,5 +1,7 @@
 <div>
     <h1>Julie</h1>
-    <p>Hi! I'm Julieta Goldsmidt :)</p>
-    <img src="/static/julie-profile.jpeg" alt="">
+    <h2>About me</h2>
+    <p>Hi! I'm Julieta Goldsmidt I'm Julieta, from Argentina. I'm a psychologist and researcher. I'm delighted to take part in this experience because I find Digital Humanities fascinating and I think this course will be useful to improve my skills and learn
+        about different resources.:)</p>
+    <img src="/static/julie-profile.jpeg" alt="Julie's photo" width="500" height="600" ">
 </div>
