--- a/src/content/pages/nerybio.html
+++ b/src/content/pages/nerybio.html
@@ -1,4 +1,4 @@
 <div>
 <h1 Nery's Bio </h1>
-<p>Nery González is a Ph.D. student from Venezuela. She completed her bachelor's studies in Sociology at the Central University of Venezuela. She is currently investigating Diasporic Literature and transnational narratives from the Caribbean.</p></pre>
+<p>Nery Gonzalez is a Ph.D student from Venezuela. She completed her bachelor's studies in Sociology at the Central University of Venezuela. She is currently investigating Diasporic Literature and transnational narratives form the Caribbean</p></pre>
 </div>
