--- a/src/content/pages/julie.html
+++ b/src/content/pages/julie.html
@@ -1,7 +1,9 @@
 <div>
     <h1>Julie</h1>
     <h2>About me</h2>
-    <p>Hi! I'm Julieta Goldsmidt I'm Julieta, from Argentina. I'm a psychologist and researcher. I'm delighted to take part in this experience because I find Digital Humanities fascinating and I think this course will be useful to improve my skills and learn
-        about different resources.:)</p>
-    <img src="/static/julie-profile.jpeg " alt="Julie's photo" width="100vmax" align="left" ">
+
+    <img src="/static/julie-profile.jpeg " alt="Julie's photo" width="100vmax" style="float: left; ">
+    <p>Hi! I'm Julieta Goldsmidt, from Argentina. I'm a psychologist and researcher. I'm delighted to take part in this experience because I find Digital Humanities fascinating and I think this course will be useful to improve my skills and learn about different
+        resources.:)
+    </p>
 </div>
