--- a/src/content/pages/julie.html
+++ b/src/content/pages/julie.html
@@ -1,9 +1,8 @@
 <div>
-    <h1>Julie</h1>
-    <h2>About me</h2>
+    <h1 style="text-align: center;" ;>Julieta Goldsmidt</h1>
 
-    <img src="julie-profile.jpeg " alt="Julie's photo" width="150vmax" style="float: left;" " hspace="10 " vspace="10 " ">
-    <p align="justify">Hi! I'm Julieta Goldsmidt, from Argentina. I'm a psychologist and researcher. I'm delighted to take part in this experience because I find Digital Humanities fascinating and I think this course will be useful to improve my skills and learn about different
-        resources.:)
+    <img src="julie-profile.jpeg " alt="Julie's photo" width="200vmax" style="float: left;" " hspace="15 " vspace="10 " ">
+    <p align="justify">Clinical psychologist and psychoanalyst. Ph.D student in psychology (UBA). Researcher specializing in topology and its uses in the field of mental health. Presenter at multiple research conferences (UBA, AASM, AAHD) as well as co-author of books and
+        publications in academic journals.
     </p>
 </div>
