--- a/src/content/pages/alice.html
+++ b/src/content/pages/alice.html
@@ -6,5 +6,5 @@
 <div>
 <h1><center>Alice Bi</center></h1>
 <center><img src="https://www.dropbox.com/s/hesqzwmt61nu4w1/profile.JPEG?dl=1" alt="Profile picture." width="auto", height="200px"></center>
-<p style="font-size:22px">Alice is an undergraduate student at the University of Maryland, College Park double-majoring in English and International Relations. She's lived in Taipei, Beijing, Singapore, and now College Park - where she's a member of the Jimenez-Porter Writers' House. She's interested in the digital and liminal.</p>
+<p>Alice is an undergraduate student at the University of Maryland, College Park double-majoring in English and International Relations. She's lived in Taipei, Beijing, Singapore, and now College Park - where she's a member of the Jimenez-Porter Writers' House. She's interested in the digital and liminal.</p>
 </div>
