--- a/src/content/pages/Nery.html
+++ b/src/content/pages/Nery.html
@@ -2,5 +2,5 @@
     <h1>Nery</h1>
     <img src="Neryprofile_pic.jpeg" alt="Neryprofile_pic photo" width="200vmax" style="float: left;" " hspace="15 " vspace="10 " ">
     <h2>About me</h2>
-    <p>Nery González is a Ph.D. student from Venezuela. She completed her bachelor's studies in Sociology at the Central University of Venezuela. She is currently investigating Diasporic Literature and transnational narratives from the Caribbean.</p>
+    <p align="justify"> Nery González is a Ph.D. student from Venezuela. She completed her bachelor's studies in Sociology at the Central University of Venezuela. She is currently investigating Diasporic Literature and transnational narratives from the Caribbean.</p>
 </div>
