--- a/src/content/pages/team.html
+++ b/src/content/pages/team.html
@@ -1,4 +1,7 @@
 <div>
     <h1>Our Team</h1>
-    <a href="/Carlos">Carlos</a>
+    <a href="/alice.html">Alice</a>
+    <a href="/Carlos.html">Carlos</a>
+    <a href="/julie.html">Julieta</a>
+    <a href="/Nery.html">Nery</a>
 </div>
