--- a/src/content/pages/team.html
+++ b/src/content/pages/team.html
@@ -1,7 +1,7 @@
 <div>
     <h1>Our Team</h1>
-    <a href="/alice.html">Alice</a>
-    <a href="/Carlos.html">Carlos</a>
-    <a href="/julie.html">Julieta</a>
-    <a href="/Nery.html">Nery</a>
+    <a href="/src/content/pages/Bios/alice.html">Alice</a>
+    <a href="/src/content/pages/Bios/Carlos.html">Carlos</a>
+    <a href="/src/content/pages/Bios/julie.html">Julieta</a>
+    <a href="/src/content/pages/Bios/Nery.html">Nery</a>
 </div>
