--- a/src/content/pages/team.html
+++ b/src/content/pages/team.html
@@ -1,7 +1,7 @@
 <div>
     <h1>Our Team</h1>
-    <a href="/src/content/pages/Bios/alice.html">Alice</a>
-    <a href="/src/content/pages/Bios/Carlos.html">Carlos</a>
-    <a href="/src/content/pages/Bios/julie.html">Julieta</a>
-    <a href="/src/content/pages/Bios/Nery.html">Nery</a>
+    <a href="https://41ibi.github.io/code_copycats/alice">Alice</a>
+    <a href="https://41ibi.github.io/code_copycats/Carlos">Carlos</a>
+    <a href="https://41ibi.github.io/code_copycats/julie">Julieta</a>
+    <a href="https://41ibi.github.io/code_copycats/Nery">Nery</a>
 </div>
