--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,4 +1,5 @@
 <div>
     <h1>About Us</h1>
-    <p>Blah</p>
+    <p>The code copycats is a group aiming to develop collaborative work to build a static site of the text An Account of a Voyage up the River de la Plata (TEI edition) in English and Spanish.
+    </p>
 </div>
