--- a/src/content/pages/Carlos.html
+++ b/src/content/pages/Carlos.html
@@ -1,14 +1,14 @@
 <div>
-<h1>Carlos J. Nusch</h1>
-<h3><i>Presentación</i></h3>
-<p><justify><i>Carlos J. Nusch</i> es Profesor y Licenciado en Letras por la <b>Universidad Nacional de La Plata</b> y Máster en Humanidades Digitales por la <b>Universidad Nacional de Educación a Distancia</b>. Ha publicado varios artículos sobre trabajo académico colaborativo, repositorios digitales, digitalización de patrimonio cultural, análisis del discurso político y literatura clásica, medieval y moderna. Trabaja en el <b>Servicio de Difusión de la Creación Intelectual (SEDICI)</b> de la UNLP, en el Proyecto de Enlace de Bibliotecas (PREBI) y en el repositorio CIC-Digital (CICPBA).</justify></p><br/>
-<h2>Objetivos de desarrollo personal</h2>
-<p>Mis objetivos para esta materia son:</p>
-<ul>
-<li> Aprender todo lo que pueda sobre tecnlolgías Web </li>
-<li> Aprender a manejar herramientas para la creación y gestión de ediciones digitales </li>
-<li> Desarrollar habilidades que me permitan crear y gestionar mis propias ediciones </li>
-<li> Ver cómo el uso de estas tecnologías puede facilitar, agregarle valor y difundir mi trabajo </li>
-</ul>
+    <h1>Carlos J. Nusch</h1>
+    <h3><i>Presentación</i></h3> <img src="Carlos.jpeg" alt="Profile picture." width="auto", height="200px">
+    <p><justify><i>Carlos J. Nusch</i> es Profesor y Licenciado en Letras por la <b>Universidad Nacional de La Plata</b> y Máster en Humanidades Digitales por la <b>Universidad Nacional de Educación a Distancia</b>. Ha publicado varios artículos sobre trabajo académico colaborativo, repositorios digitales, digitalización de patrimonio cultural, análisis del discurso político y literatura clásica, medieval y moderna. Trabaja en el <b>Servicio de Difusión de la Creación Intelectual (SEDICI)</b> de la UNLP, en el Proyecto de Enlace de Bibliotecas (PREBI) y en el repositorio CIC-Digital (CICPBA).</justify></p><br/>
+    <h2>Objetivos de desarrollo personal</h2>
+    <p>Mis objetivos para esta materia son:</p>
+    <ul>
+    <li> Aprender todo lo que pueda sobre tecnlolgías Web </li>
+    <li> Aprender a manejar herramientas para la creación y gestión de ediciones digitales </li>
+    <li> Desarrollar habilidades que me permitan crear y gestionar mis propias ediciones </li>
+    <li> Ver cómo el uso de estas tecnologías puede facilitar, agregarle valor y difundir mi trabajo </li>
+    </ul>
 </div>
-    
+        
