--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,4 +1,5 @@
 <div>
+    <img src="CatLogo_Test" alt="Catlogoexample"width="1024vmax" style="float: center;" " hspace="15 " vspace="10 " ">
     <h1>About Us</h1>
     <p>The code copycats is a group aiming to develop collaborative work to build a static site of the text An Account of a Voyage up the River de la Plata (TEI edition) in English and Spanish.
     </p>
