--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,6 +1,6 @@
 <div>
     <img src="Cat_Logo_test2" alt="Cat logo ejemplo" width="200vmax" style="float: left;" " hspace="15 " vspace="10 " ">
     <h1>About Us</h1>
-    <p align="justify">The code copycats is a group aiming to develop collaborative work to build a static site of the text An Account of a Voyage up the River de la Plata (TEI edition) in English and Spanish.
+    <p align="justify">The code copycats is a group aiming to develop collaborative work to build a static site of the text <em> An Account of a Voyage up the River de la Plata </em> (TEI edition) in English and Spanish.
     </p>
 </div>
