--- a/src/content/pages/Bios/Carlos.html
+++ b/src/content/pages/Bios/Carlos.html
@@ -1,14 +1,22 @@
 <div>
-    <h1>Carlos J. Nusch</h1>
-    <h3><i>Presentación</i></h3> <img src="Carlos.jpeg" alt="Profile picture." width="auto", height="200px">
-    <p><justify><i>Carlos J. Nusch</i> es Profesor y Licenciado en Letras por la <b>Universidad Nacional de La Plata</b> y Máster en Humanidades Digitales por la <b>Universidad Nacional de Educación a Distancia</b>. Ha publicado varios artículos sobre trabajo académico colaborativo, repositorios digitales, digitalización de patrimonio cultural, análisis del discurso político y literatura clásica, medieval y moderna. Trabaja en el <b>Servicio de Difusión de la Creación Intelectual (SEDICI)</b> de la UNLP, en el Proyecto de Enlace de Bibliotecas (PREBI) y en el repositorio CIC-Digital (CICPBA).</justify></p><br/>
-    <h2>Objetivos de desarrollo personal</h2>
-    <p>Mis objetivos para esta materia son:</p>
-    <ul>
-    <li> Aprender todo lo que pueda sobre tecnlolgías Web </li>
-    <li> Aprender a manejar herramientas para la creación y gestión de ediciones digitales </li>
-    <li> Desarrollar habilidades que me permitan crear y gestionar mis propias ediciones </li>
-    <li> Ver cómo el uso de estas tecnologías puede facilitar, agregarle valor y difundir mi trabajo </li>
-    </ul>
-</div>
-        
+    <img src="Carlos.jpeg" alt="Profile picture." width="auto", height="200px">
+        <div class="barra-redes">
+                <a href="https://scholar.google.com/citations?user=JvOePv0AAAAJ&amp;hl=en" target="_blank" class="no-lightbox"><img class=" wp-image-16" src="google_scholar.png" alt="google_scholar" width="20" height="20" scale="0"></a>
+                <a href="https://www.researchgate.net/profile/Carlos_Nusch" target="_blank" class="no-lightbox"><img class=" wp-image-17" src="research-gate.png" alt="research-gate" width="20" height="20" scale="0"></a>
+                <a href="https://orcid.org/0000-0003-1715-4228" target="_blank" class="no-lightbox"><img class=" wp-image-19" src="orcid.gif" alt="orcid" width="20" height="20" scale="0"> </a>
+                <a href="https://www.linkedin.com/in/carlos-nusch-962b8319/" target="_blank" class="no-lightbox"><img class=" wp-image-19" src="linkedin.png" alt="$linkedinid" width="20" height="20" scale="0"> </a>
+                <a href="https://www.facebook.com/carlos.nusch" target="_blank" class="no-lightbox"><img class=" wp-image-19" src="facebook.jpg" alt="facebook" width="20" height="20" scale="0"> </a>
+                <a href="https://twitter.com/KharolusIII" target="_blank" class="no-lightbox"><img class=" wp-image-19" src="twitter.png" alt="twitter" width="20" height="20" scale="0"> </a>
+        </div>
+        <h1>Carlos J. Nusch</h1>
+        <h3><i>Presentación</i></h3>
+        <p width="auto"><justify><i>Carlos J. Nusch</i> es Profesor y Licenciado en Letras por la <b>Universidad Nacional de La Plata</b> y Máster en Humanidades Digitales por la <b>Universidad Nacional de Educación a Distancia</b>. Ha publicado varios artículos sobre trabajo académico colaborativo, repositorios digitales, digitalización de patrimonio cultural, análisis del discurso político y literatura clásica, medieval y moderna. Trabaja en el <b>Servicio de Difusión de la Creación Intelectual (SEDICI)</b> de la UNLP, en el Proyecto de Enlace de Bibliotecas (PREBI) y en el repositorio CIC-Digital (CICPBA).</justify></p><br/>
+        <h2>Objetivos de desarrollo personal</h2>
+        <p>Mis objetivos para esta materia son:</p>
+        <ul>
+        <li> Aprender todo lo que pueda sobre tecnlolgías Web </li>
+        <li> Aprender a manejar herramientas para la creación y gestión de ediciones digitales </li>
+        <li> Desarrollar habilidades que me permitan crear y gestionar mis propias ediciones </li>
+        <li> Ver cómo el uso de estas tecnologías puede facilitar, agregarle valor y difundir mi trabajo </li>
+        </ul>
+    </div>
