--- a/src/content/pages/Bios/Nery.html
+++ b/src/content/pages/Bios/Nery.html
@@ -1,6 +1,10 @@
 <div>
     <h1>Nery González</h1>
-    <img src="Neryprofile_pic.jpeg" alt="Neryprofile_pic photo" width="200vmax" style="float: left;" " hspace="15 " vspace="10 " ">
+    <img src="Neryprofile_pic.jpeg" alt="Neryprofile_pic photo" width="200vmax" style="float: center;" " hspace="15 " vspace="10 " ">
+    <div class="barra-redes">
+        <a href="https://www.linkedin.com/in/ligia-neryanna-gonz%C3%A1lez-4b1871b2/" target="_blank" class="no-lightbox"><img class=" wp-image-19" src="linkedin.png" alt="$linkedinid" width="20" height="20" scale="0"> </a>
+        <a href="https://www.facebook.com/ligia.neryanna/" target="_blank" class="no-lightbox"><img class=" wp-image-19" src="facebook.jpg" alt="facebook" width="20" height="20" scale="0"> </a>
+    </div>
     <h2>About me</h2>
     <p align="justify"> Nery González is a Ph.D. student from Venezuela. She completed her bachelor's studies in Sociology at the Central University of Venezuela. She is currently investigating Diasporic Literature and transnational narratives from the Caribbean.</p>
 </div>
