--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,6 +1,8 @@
 <div>
-    <img src="Cat_Logo_test2.jpg" alt="Cat logo ejemplo" width="500vmax" style="float: center;" " hspace="15 " vspace="10 " ">
-    <h1>About Us</h1>
-    <p align="justify">The code copycats is a group aiming to develop collaborative work to build a static site of the text <em> An Account of a Voyage up the River de la Plata </em> (TEI edition) in English and Spanish.
+    <img src="Cat_Logo_test2.jpg" alt="Cat logo ejemplo" width="400vmax" style="float: center;" " hspace="15 " vspace="10 " ">
+    <h1>Our project</h1>
+    <p align="center">The code copycats are a group that integrates students from the University of Maryland and the Universidad del Salvador. We are a multicultural and multilingual group aiming to develop collaborative work to build a bilingual static site of the text <em>An Account of a Voyage up the River de la Plata (TEI edition)</em>
+
+        This project is currently in progress and goes hand in hand with the course Digital Publishing with Minimal computing: humanities at a global scale, with a focus on minimal computing, and design thinking. In addition to studying content and forms related to digital culture, our purpose is to learn computational tools like HTML, CSS, and TEI coding languages to enhance textual analysis of the Colonial period.
     </p>
 </div>
