--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,5 +1,5 @@
 <div>
-    <img src="Cat_Logo_test2.jpg" alt="Cat logo ejemplo" width="300vmax" style="float: right;" " hspace="20 " vspace="6 " ">
+    <img src="Cat_Logo_test2.jpg" alt="Cat logo ejemplo" width="300vmax" style="float: left;" " hspace="20 " vspace="3" ">
     <p align="justify"> <b>The Code Copycats</b> are a group that integrates students from the University of Maryland and the Universidad del Salvador. We are a multicultural and multilingual group aiming to develop collaborative work to build a bilingual static site of the text <em>An Account of a Voyage up the River de la Plata (TEI edition)</em> 
     This project is currently in progress and goes hand in hand with the course Digital Publishing with Minimal computing: humanities at a global scale, with a focus on minimal computing, and design thinking. In addition to studying content and forms related to digital culture, our purpose is to learn computational tools like HTML, CSS, and TEI coding languages to enhance textual analysis of the Colonial period.
     </p>
