--- a/src/content/pages/home.html
+++ b/src/content/pages/home.html
@@ -1,5 +1,11 @@
-<div>
-<h1>Hello World!</h1>
-<p>Welcome to our project</p>
-<img src="mith301.jpg" width="560" height="400" alt="Digital Publication with Minimal Computing"/>
+<div class="home_title">
+<p class="t1"><b><i>An Account of a Voyage <br>up the<br> River de la Plata</i></b></p>
+<p class="t2">(TEI edition)<br>A project by the Code Copycats.</p>
+<img src="colorful_copycats.png" width="auto" height="300" alt="Digital Publication with Minimal Computing"/>
+</div>
+
+<div class="home_nav t2">
+    <p>Click below to start exploring.</p>
+    <a href="https://41ibi.github.io/code_copycats/team">Meet the team </a>or read our <a href="https://41ibi.github.io/code_copycats/copycats_charter">charter.</a>
+    <a href="https://41ibi.github.io/code_copycats/team">Learn about the edition.</a>
 </div>
