Minor Changes at Charter (missing translations) and Bio (Photo and Social Media Aesthetics)

--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -1,4 +1,4 @@
-<div>
+<div id="charter">
 <h1>Team charter / Contrato de equipo</h1>
     <h3><i>Last updated / Última actualización: 2022-09-21</i></h3>
 	<h3>Group name / Nombre del Equipo: The Code Copycats</h3>
