--- a/src/content/pages/home.html
+++ b/src/content/pages/home.html
@@ -1,11 +1,12 @@
-<div class="home_title">
-    <p class="t2"><b><i>An Account of a Voyage <br>up the<br> River de la Plata</i></b></p>
-    <p class="t3">(TEI edition)<br>A project by the Code Copycats.</p>
-    <img src="colorful_copycats.png" width="auto" height="300" alt="Digital Publication with Minimal Computing" />
-</div>
+<div class="container">
+    <div class="home_title">
+        <p class="t2"><b><i>An Account of a Voyage <br>up the<br> River de la Plata</i></b></p>
+        <p class="t3">(TEI edition)<br>A project by the Code Copycats.</p>
+        <img src="colorful_copycats.png" width="auto" height="300" alt="Digital Publication with Minimal Computing" />
+    </div>
 
-<div class="home_nav t2">
-    <p>Click below to start exploring.</p>
-    <a href="https://41ibi.github.io/code_copycats/team">Meet the team </a>or read our <a href="https://41ibi.github.io/code_copycats/copycats_charter">charter.</a>
-    <a href="https://41ibi.github.io/code_copycats/team">Learn about the edition.</a>
-</div>
+    <div class="home_nav t2">
+        <p>Click below to start exploring.</p>
+        <a href="https://41ibi.github.io/code_copycats/team">Meet the team </a>or read our <a href="https://41ibi.github.io/code_copycats/copycats_charter">charter.</a>
+        <a href="https://41ibi.github.io/code_copycats/team">Learn about the edition.</a>
+    </div>
