--- a/src/content/pages/home.html
+++ b/src/content/pages/home.html
@@ -7,6 +7,6 @@
 
     <div class="home_nav t2">
         <p>Click below to start exploring.</p>
-        <a href="https://41ibi.github.io/code_copycats/team">Meet the team </a>or read our <a href="https://41ibi.github.io/code_copycats/copycats_charter">charter.</a>
-        <a href="https://41ibi.github.io/code_copycats/team">Learn about the edition.</a>
+        <a href="https://41ibi.github.io/code_copycats/team"><button class="button-36" role="button">Meet the team</button></a>or read our <a href="https://41ibi.github.io/code_copycats/copycats_charter">charter.</a>
+        <a href="https://41ibi.github.io/code_copycats/team"><button class="button-36" role="button">Learn about the edition.</button></a>
     </div>
