--- a/src/content/pages/home.html
+++ b/src/content/pages/home.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="home_title">
-        <p class="t1"><b>An Account of a Voyage <br>up the<br> River de la Plata</b></p>
+        <p class="t1"><b>An Account of a Voyage up the River de la Plata</b></p>
         <p class="t2">(TEI edition)<br>A project by the Code Copycats.</p>
         <img src="colorful_copycats.png" width="auto" height="300" alt="Digital Publication with Minimal Computing" />
     </div>
