--- a/src/content/pages/home.html
+++ b/src/content/pages/home.html
@@ -6,6 +6,7 @@
     </div>
 
     <div class="home_nav t2">
-        <a href="https://41ibi.github.io/code_copycats/team"><button class="button-36" role="button">Meet the team</button></a>or read our <a href="https://41ibi.github.io/code_copycats/copycats_charter">charter.</a>
+        <a href="https://41ibi.github.io/code_copycats/team"><button class="button-36" role="button">Meet the team</button></a>
+        <a href="https://41ibi.github.io/code_copycats/edition"><button class="button-36" role="button">Our charter</button></a>
         <a href="https://41ibi.github.io/code_copycats/Copycats%20Charter"><button class="button-36" role="button">Learn about the edition.</button></a>
     </div>
