--- a/src/content/pages/home.html
+++ b/src/content/pages/home.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="home_title">
         <p class="t1"><b>An Account of a Voyage up the River de la Plata</b></p>
-        <p class="t2">(TEI edition)<br>A project by the Code Copycats.</p>
+        <p class="t2">(TEI edition)<br></p>
         <img src="colorful_copycats.png" width="auto" height="300" alt="Digital Publication with Minimal Computing" />
     </div>
 
@@ -10,3 +10,8 @@
         <a href="https://41ibi.github.io/code_copycats/edition"><button class="button-36" role="button">Our charter</button></a>
         <a href="https://41ibi.github.io/code_copycats/Copycats%20Charter"><button class="button-36" role="button">Learn about the edition.</button></a>
     </div>
+    <footer>
+        <p>
+            A project by the Code Copycats.
+        </p>
+    </footer>
