--- a/src/content/pages/home.html
+++ b/src/content/pages/home.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="home_title">
-        <p class="t1"><b>An Account of a Voyage up the River de la Plata</b></p>
+        <p class="t1"><b>AN ACCOUNT OF A VOYAGE UP THE RIVER DE LA PLATA</b></p>
         <p class="t2">(TEI edition)<br></p>
         <img src="colorful_copycats.png" width="auto" height="300" alt="Digital Publication with Minimal Computing" />
     </div>
@@ -8,7 +8,7 @@
     <div class="home_nav t2">
         <a href="https://41ibi.github.io/code_copycats/team"><button class="button-36" role="button">Meet the team</button></a>
         <a href="https://41ibi.github.io/code_copycats/edition"><button class="button-36" role="button">Our charter</button></a>
-        <a href="https://41ibi.github.io/code_copycats/Copycats%20Charter"><button class="button-36" role="button">Learn about the edition.</button></a>
+        <a href="https://41ibi.github.io/code_copycats/Copycats%20Charter"><button class="button-36" role="button">Learn about the edition</button></a>
     </div>
     <footer>
         <p>
