--- a/src/content/pages/home.html
+++ b/src/content/pages/home.html
@@ -12,6 +12,6 @@
     </div>
     <footer>
         <p>
-            A project by the Code Copycats.
+            A project by the Code Copycats|2022
         </p>
     </footer>
