--- a/src/content/pages/home.html
+++ b/src/content/pages/home.html
@@ -7,8 +7,8 @@
 
     <div class="home_nav t2">
         <a href="https://41ibi.github.io/code_copycats/team"><button class="button-36" role="button">Meet the team</button></a>
-        <a href="https://41ibi.github.io/code_copycats/edition"><button class="button-36" role="button">Our charter</button></a>
-        <a href="https://41ibi.github.io/code_copycats/Copycats%20Charter"><button class="button-36" role="button">Learn about the edition</button></a>
+        <a href="https://41ibi.github.io/code_copycats/Copycats%20Charter"><button class="button-36" role="button">Our charter</button></a>
+        <a href="https://41ibi.github.io/code_copycats/edition"><button class="button-36" role="button">Learn about the edition</button></a>
     </div>
     <footer>
         <p>
