--- a/src/content/pages/home.html
+++ b/src/content/pages/home.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="home_title">
-        <p class="t1"><b>AN ACCOUNT OF A VOYAGE UP THE RIVER DE LA PLATA</b></p>
+        <p class="t1">An Account Of A Voyage Up The River De La Plata</p>
         <p class="t2">(TEI edition)<br></p>
         <img src="colorful_copycats.png" width="auto" height="300" alt="Digital Publication with Minimal Computing" />
     </div>
