--- a/src/content/pages/home.html
+++ b/src/content/pages/home.html
@@ -10,8 +10,9 @@
         <a href="https://41ibi.github.io/code_copycats/Copycats%20Charter"><button class="button-36" role="button">Our charter</button></a>
         <a href="https://41ibi.github.io/code_copycats/edition"><button class="button-36" role="button">Learn about the edition</button></a>
     </div>
-    <footer>
-        <p>
-            A project by the Code Copycats|2022
-        </p>
-    </footer>
+</div>
+<footer>
+    <p>
+        A project by the Code Copycats|2022
+    </p>
+</footer>
