Some aesthetic changes at my bio. New Charte Image and style css.

--- a/src/content/pages/Bios/Carlos.html
+++ b/src/content/pages/Bios/Carlos.html
@@ -1,13 +1,13 @@
 <div>
-    <img src="Carlos.jpeg" alt="Profile picture." width="auto", height="200px">
+    <div class="foto-rounded-circle"></div>
         <div class="barra-redes">
         </br>
-            <a href="https://scholar.google.com/citations?user=JvOePv0AAAAJ&amp;hl=en" target="_blank"><img src="google_scholar.png" alt="google_scholar" width="20" height="20" scale="0"></a>
-            <a href="https://www.researchgate.net/profile/Carlos_Nusch" target="_blank"><img src="research-gate.png" alt="research-gate" width="20" height="20"></a>
-            <a href="https://orcid.org/0000-0003-1715-4228" target="_blank"><img src="orcid.gif" alt="orcid" width="20" height="20" scale="0"> </a>
-            <a href="https://www.linkedin.com/in/carlos-nusch-962b8319/" target="_blank"><img src="linkedin.png" alt="$linkedinid" width="20" height="20" scale="0"> </a>
-            <a href="https://www.facebook.com/carlos.nusch" target="_blank"><img src="facebook.jpg" alt="facebook" width="20" height="20" scale="0"> </a>
-            <a href="https://twitter.com/KharolusIII" target="_blank"><img src="twitter.png" alt="twitter" width="20" height="20" scale="0"> </a>
+            <a href="https://scholar.google.com/citations?user=JvOePv0AAAAJ&amp;hl=en" target="_blank"><img src="google_scholar.png" alt="google_scholar" width="20" height="20"></a>
+            <a href="https://www.researchgate.net/profile/Carlos_Nusch" target="_blank"><img src="research-gate.png" alt="research-gate" width="20"></a>
+            <a href="https://orcid.org/0000-0003-1715-4228" target="_blank"><img src="orcid.gif" alt="orcid" width="20" height="20"></a>
+            <a href="https://www.linkedin.com/in/carlos-nusch-962b8319/" target="_blank"><img src="linkedin.png" alt="$linkedinid" width="20" height="20"></a>
+            <a href="https://www.facebook.com/carlos.nusch" target="_blank"><img src="facebook.jpg" alt="facebook" width="20" height="20"></a>
+            <a href="https://twitter.com/KharolusIII" target="_blank"><img src="twitter.png" alt="twitter" width="20" height="20"></a>
         </br>
         </div>
         <h1>Carlos J. Nusch</h1>
