--- a/src/content/pages/team.html
+++ b/src/content/pages/team.html
@@ -6,6 +6,17 @@
     <a href="https://41ibi.github.io/code_copycats/Nery">Nery</a>
 </div>
 
+<div class="card">
+    <img src="img.jpg" alt="John" style="width:100%">
+    <h1>John Doe</h1>
+    <p class="title-card">CEO & Founder, Example</p>
+    <p>Harvard University</p>
+    <a href="#"><i class="fa fa-dribbble"></i></a>
+    <a href="#"><i class="fa fa-twitter"></i></a>
+    <a href="#"><i class="fa fa-linkedin"></i></a>
+    <a href="#"><i class="fa fa-facebook"></i></a>
+    <p><button class="button-card">Contact</button></p>
+</div>
 
 
 
