--- a/src/content/pages/team.html
+++ b/src/content/pages/team.html
@@ -7,15 +7,15 @@
 </div>
 
 <div class="card">
-    <img src="img.jpg" alt="John" style="width:100%">
-    <h1>John Doe</h1>
-    <p class="title-card">CEO & Founder, Example</p>
-    <p>Harvard University</p>
+    <img src="img.jpg" alt="Carlos" style="width:100%">
+    <h1>Carlos J. Nusch</h1>
+    <p class="title-card">Profesor y Licenciado en Letras</p>
+    <p>Universidad Nacional de La Plata</p>
     <a href="#"><i class="fa fa-dribbble"></i></a>
     <a href="#"><i class="fa fa-twitter"></i></a>
     <a href="#"><i class="fa fa-linkedin"></i></a>
     <a href="#"><i class="fa fa-facebook"></i></a>
-    <p><button class="button-card">Contact</button></p>
+    <p><a href="https://41ibi.github.io/code_copycats/Carlos"><button class="button-card">More info</button></a></p>
 </div>
 
 
