--- a/src/content/pages/team.html
+++ b/src/content/pages/team.html
@@ -1,5 +1,5 @@
 <div>
-    <h1>Our Team</h1>
+    <h1 style="align-self:center ;">Our Team</h1>
     <a href="https://41ibi.github.io/code_copycats/alice">Alice</a>
     <a href="https://41ibi.github.io/code_copycats/Carlos">Carlos</a>
     <a href="https://41ibi.github.io/code_copycats/julie">Julieta</a>
