--- a/src/content/pages/team.html
+++ b/src/content/pages/team.html
@@ -19,7 +19,7 @@
 </div>
 
 <div class="card">
-    <img src="julie-profile.jpg" alt="Juieta Goldsmidt" style="width:100%">
+    <img src="julie-profile.jpeg" alt="Julieta Goldsmidt" style="width:100%">
     <h1>Julieta Y. Goldsmidt</h1>
     <p class="title-card">Clinical psychologist</p>
     <p>Universidad de Buenos Aires</p>
