--- a/src/content/pages/team.html
+++ b/src/content/pages/team.html
@@ -7,7 +7,7 @@
 </div>
 <div class="card-container">
     <div class="card">
-        <img src="img.jpg" alt="Carlos" style="width:100%">
+        <img src="Carlos.jpeg" alt="Carlos" style="width:100%">
         <h1>Carlos J. Nusch</h1>
         <p class="title-card">Profesor y Licenciado en Letras</p>
         <p>Universidad Nacional de La Plata</p>
@@ -31,7 +31,7 @@
     </div>
 
     <div class="card">
-        <img src="img.jpg" alt="Nery González" style="width:100%">
+        <img src="Neryprofile_pic.jpeg" alt="Nery González" style="width:100%">
         <h1>Nery González</h1>
         <p class="title-card">Sociologist</p>
         <p>Central University of Venezuela</p>
@@ -43,7 +43,7 @@
     </div>
 
     <div class="card">
-        <img src="img.jpg" alt="Alice Bi" style="width:100%">
+        <img src="alice.JPEG" alt="Alice Bi" style="width:100%">
         <h1>Alice Bi</h1>
         <p class="title-card">Profesor y Licenciado en Letras</p>
         <p>Universidad Nacional de La Plata</p>
