--- a/src/content/pages/team.html
+++ b/src/content/pages/team.html
@@ -1,63 +1,59 @@
 <div>
     <h1 style="align-self:center ;">Our Team</h1>
-    <a href="https://41ibi.github.io/code_copycats/alice">Alice</a>
-    <a href="https://41ibi.github.io/code_copycats/Carlos">Carlos</a>
-    <a href="https://41ibi.github.io/code_copycats/julie">Julieta</a>
-    <a href="https://41ibi.github.io/code_copycats/Nery">Nery</a>
-</div>
-<div class="card-container">
-    <div class="card">
-        <img src="Carlos.jpeg" alt="Carlos" style="width:100%">
-        <h1>Carlos J. Nusch</h1>
-        <p class="title-card">Profesor y Licenciado en Letras</p>
-        <p>Universidad Nacional de La Plata</p>
-        <a href="#"><i class="fa fa-dribbble"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <p><a href="https://41ibi.github.io/code_copycats/Carlos"><button class="button-card">More info</button></a></p>
+
+    <div class="card-container">
+        <div class="card">
+            <img src="alice.JPEG" alt="Alice Bi" style="width:100%">
+            <h1>Alice Bi</h1>
+            <p class="title-card">Profesor y Licenciado en Letras</p>
+            <p>Universidad Nacional de La Plata</p>
+            <a href="#"><i class="fa fa-dribbble"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <p><a href="https://41ibi.github.io/code_copycats/Alice"><button class="button-card">More info</button></a></p>
+        </div>
+        <div class="card">
+            <img src="Carlos.jpeg" alt="Carlos" style="width:100%">
+            <h1>Carlos J. Nusch</h1>
+            <p class="title-card">Profesor y Licenciado en Letras</p>
+            <p>Universidad Nacional de La Plata</p>
+            <a href="#"><i class="fa fa-dribbble"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <p><a href="https://41ibi.github.io/code_copycats/Carlos"><button class="button-card">More info</button></a></p>
+        </div>
+
+        <div class="card">
+            <img src="julie-profile.jpeg" alt="Julieta Goldsmidt" style="width:100%">
+            <h1>Julieta Y. Goldsmidt</h1>
+            <p class="title-card">Clinical psychologist</p>
+            <p>Universidad de Buenos Aires</p>
+            <a href="#"><i class="fa fa-dribbble"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <p><a href="https://41ibi.github.io/code_copycats/julie"><button class="button-card">More info</button></a></p>
+        </div>
+
+        <div class="card">
+            <img src="Neryprofile_pic.jpeg" alt="Nery González" style="width:100%">
+            <h1>Nery González</h1>
+            <p class="title-card">Sociologist</p>
+            <p>Central University of Venezuela</p>
+            <a href="#"><i class="fa fa-dribbble"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <p><a href="https://41ibi.github.io/code_copycats/Nery"><button class="button-card">More info</button></a></p>
+        </div>
+
+
     </div>
 
-    <div class="card">
-        <img src="julie-profile.jpeg" alt="Julieta Goldsmidt" style="width:100%">
-        <h1>Julieta Y. Goldsmidt</h1>
-        <p class="title-card">Clinical psychologist</p>
-        <p>Universidad de Buenos Aires</p>
-        <a href="#"><i class="fa fa-dribbble"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <p><a href="https://41ibi.github.io/code_copycats/Carlos"><button class="button-card">More info</button></a></p>
-    </div>
-
-    <div class="card">
-        <img src="Neryprofile_pic.jpeg" alt="Nery González" style="width:100%">
-        <h1>Nery González</h1>
-        <p class="title-card">Sociologist</p>
-        <p>Central University of Venezuela</p>
-        <a href="#"><i class="fa fa-dribbble"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <p><a href="https://41ibi.github.io/code_copycats/Carlos"><button class="button-card">More info</button></a></p>
-    </div>
-
-    <div class="card">
-        <img src="alice.JPEG" alt="Alice Bi" style="width:100%">
-        <h1>Alice Bi</h1>
-        <p class="title-card">Profesor y Licenciado en Letras</p>
-        <p>Universidad Nacional de La Plata</p>
-        <a href="#"><i class="fa fa-dribbble"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <p><a href="https://41ibi.github.io/code_copycats/Carlos"><button class="button-card">More info</button></a></p>
-    </div>
-
-</div>
-
-<footer>
-    <p>
-        A project by the Code Copycats | 2022
-    </p>
-</footer>
+    <footer>
+        <p>
+            A project by the Code Copycats | 2022
+        </p>
+    </footer>
