--- a/src/content/pages/team.html
+++ b/src/content/pages/team.html
@@ -1,5 +1,5 @@
 <div>
-    <h1 style="align-self:center ;">Our Team</h1>
+    <h1 style="align-content: center ;">Our Team</h1>
 
     <div class="card-container">
         <div class="card">
