--- a/src/content/pages/team.html
+++ b/src/content/pages/team.html
@@ -3,7 +3,7 @@
 
     <div class="card-container">
         <div class="card">
-            <img src="alice.JPEG" alt="Alice Bi" style="width:100%">
+            <img src="alice2.jpg" alt="Alice Bi" style="width:100%">
             <h1>Alice Bi</h1>
             <p class="title-card">Profesor y Licenciado en Letras</p>
             <p>Universidad Nacional de La Plata</p>
@@ -14,7 +14,7 @@
             <p><a href="https://41ibi.github.io/code_copycats/Alice"><button class="button-card">More info</button></a></p>
         </div>
         <div class="card">
-            <img src="Carlos.jpeg" alt="Carlos" style="width:100%">
+            <img src="Carlos2.jpeg" alt="Carlos" style="width:100%">
             <h1>Carlos J. Nusch</h1>
             <p class="title-card">Profesor y Licenciado en Letras</p>
             <p>Universidad Nacional de La Plata</p>
@@ -26,7 +26,7 @@
         </div>
 
         <div class="card">
-            <img src="julie-profile.jpeg" alt="Julieta Goldsmidt" style="width:100%">
+            <img src="julie-profile2.jpeg" alt="Julieta Goldsmidt" style="width:100%">
             <h1>Julieta Y. Goldsmidt</h1>
             <p class="title-card">Clinical psychologist</p>
             <p>Universidad de Buenos Aires</p>
