--- a/src/content/pages/team.html
+++ b/src/content/pages/team.html
@@ -5,8 +5,8 @@
         <div class="card">
             <img src="alice2.jpg" alt="Alice Bi" style="width:100%">
             <h1>Alice Bi</h1>
-            <p class="title-card">Profesor y Licenciado en Letras</p>
-            <p>Universidad Nacional de La Plata</p>
+            <p class="title-card">International Relations</p>
+            <p>University of Maryland</p>
             <a href="#"><i class="fa fa-dribbble"></i></a>
             <a href="#"><i class="fa fa-twitter"></i></a>
             <a href="#"><i class="fa fa-linkedin"></i></a>
