--- a/src/content/pages/team.html
+++ b/src/content/pages/team.html
@@ -1,6 +1,6 @@
 <div>
     <h1 style="text-align:center">Our Team</h1>
-
+    <button style="text-align: right;" class="button-61" role="button">Return</button>
     <div class="card-container">
         <div class="card">
             <img src="alice2.jpg" alt="Alice Bi" style="width:100%">
@@ -15,7 +15,7 @@
         </div>
         <div class="card">
             <img src="Carlos2.jpeg" alt="Carlos" style="width:100%">
-            <h1>Carlos J. Nusch</h1>
+            <h1>Carlos Nusch</h1>
             <p class="title-card">Profesor y Licenciado en Letras</p>
             <p>Universidad Nacional de La Plata</p>
             <a href="#"><i class="fa fa-dribbble"></i></a>
@@ -27,7 +27,7 @@
 
         <div class="card">
             <img src="julie-profile2.jpeg" alt="Julieta Goldsmidt" style="width:100%">
-            <h1>Julieta Y. Goldsmidt</h1>
+            <h1>Julieta Goldsmidt</h1>
             <p class="title-card">Clinical psychologist</p>
             <p>Universidad de Buenos Aires</p>
             <a href="#"><i class="fa fa-dribbble"></i></a>
