--- a/src/content/pages/team.html
+++ b/src/content/pages/team.html
@@ -1,6 +1,6 @@
 <div>
     <h1 style="text-align:center">Our Team</h1>
-    <button style="text-align: right;" class="button-61" role="button">Return</button>
+    <a href="https://41ibi.github.io/home"><button style="text-align: right;" class="button-61" role="button">Return</button></a>
     <div class="card-container">
         <div class="card">
             <img src="alice2.jpg" alt="Alice Bi" style="width:100%">
